# aiogram-dictionary

./: .clocignore  Justfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
bot/: .env.example  Dockerfile  alembic.ini  pyproject.toml
bot/app/: __init__.py  config.py  constants.py  handlers.py  main.py
bot/app/db/: __init__.py  base_dao.py  session.py  translation_dao.py
bot/app/integrations/chatgpt/: __init__.py  client.py  exceptions.py  schemas.py
bot/app/models/: __init__.py  base_model.py  translation.py
bot/app/schemas/: __init__.py  translation.py
bot/app/services/: translation.py
bot/migrations/: env.py
bot/migrations/versions/: 6122f4ca5541_add_translations_view_count_field.py  ad96bc8ce641_add_translations_table.py
