[project]
name = "aiogram-dictionary"
version = "0.1.0"
description = "Телеграм-бот перевода слов и фраз на русский язык"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sentry-sdk>=2.33.0",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "I001", # Ignore isort errors
    "B008", # Do not perform function call `Depends` in argument defaults
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
disable_error_code = ["call-overload"] 
# Основные настройки типизации
disallow_untyped_defs = true  # Требовать аннотации для всех функций
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

# Настройки для работы с внешними библиотеками
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

# Дополнительные строгие проверки
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

# Настройки вывода
show_error_codes = true
pretty = true

# Исключения для конкретных модулей (если нужно)
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false  # Менее строгие требования для тестов
